# chess_board

./: README.md  chess_board.ipynb  pyproject.toml
numpy-intro/: checker-board.ipynb
